--- a/style.css
+++ b/style.css
@@ -1,56 +1,70 @@
 :root {
 	/* COLORS */
 	background-color: white;
-	--main-color: BlanchedAlmond;
-	--main2-color: OldLace;
-	--back-color: Tan;
-
-	--shadow-color: BlanchedAlmond;
+	--main-color: GainsBoro;
+	--main2-color: WhiteSmoke;
+	--back-color: BurlyWood;
 
 	/* FONT */
 	font-size: 2vh;
 	font-family: Arial, Helvetica, sans-serif;
 	text-align: center;
-	text-shadow: -0.1vh -0.1vh var(--shadow-color),
-				 -0.1vh  0.1vh var(--shadow-color),
-				  0.1vh -0.1vh var(--shadow-color),
-				  0.1vh  0.1vh var(--shadow-color);
 	color: black;
 	
 	/* SIZE */
 	min-height: 100%;
 }
 
+h1, h2 { /* LARGE TEXT BORDER */
+	text-shadow: -0.1vh -0.1vh var(--main2-color),
+				 -0.1vh  0.1vh var(--main2-color),
+				  0.1vh -0.1vh var(--main2-color),
+				  0.1vh  0.1vh var(--main2-color);
+}
+
+i { /* SIDEWAY TEXT GREY AND SMALL */
+	font-size: 0.9rem;
+	color: grey;
+}
+
 body {
 	margin: 0;
 }
 
-.header { /* HEADER */
+.header, .footer { /* HEADER & FOOTER */
 	margin: 0;
 	width: calc(100%);
 	
 	position: fixed;
-	top: 0;
 	right 0;
 	
 	text-align: center;
+	text-transform: uppercase;
+
 	background-color: var(--back-color);
 	border: 3px none var(--main-color);
 	border-bottom-style: solid;
 
 	* { /* ELEMENTS IN HEADER */
 		text-transform: uppercase;
-
 		margin: 0;
 	}
+} .header {
+	top: 0;
+} .footer {
+	bottom: 0;
+}
+
+img {
+	max-width: 100%;
+	border-radius: 30px;
 }
 
 .main {
-	max-width: 600px;
-	min-width: 40mm;
+	max-width: 200mm;
 	margin: auto;
-	margin-top: 10vh;
-	padding: 10px 50px;
+	margin-top: 6vh;
+	padding: 10px 5px;
 	
 	background-color: var(--main-color);
 	border-radius: 30px;
@@ -58,6 +72,7 @@ body {
 
 .chapter {
 	margin-top: 20px;
+	margin-bottom: 20px;
 
 	background-color: var(--main2-color);
 	border: 5px solid var(--back-color);
